--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <title>HTML</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
     <style type="text/css">
   </style>
 </head>
@@ -17,11 +17,11 @@
       <h1>The Soul Blog</h1>
     </section>
   <main><div class="row"><div class="col-6">
-   <a href="/index1.html"> <button class="btn btn-danger">Page1</button></a></div> <div class="col-6"
-    <a href="/index2.html"> <button class="btn btn-danger">Page 2</button></a>
+   <a href="index1.html"> <button class="btn btn-danger">Page1</button></a></div> <div class="col-6"
+    <a href="index2.html"> <button class="btn btn-danger">Page 2</button></a>
     </div></div> <br> <h3>To Be Expanded...</h3></div></div>
   </main>
-<script src="/main.js"
+<script src="main.js"
 </body>
 
 </html>
