--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>The Soul Blog</h1>
     </section>
   <main><div class="row"><div class="col-6">
-   <a href="index1.html"> <button class="btn btn-danger">Page1</button></a></div> <div class="col-6"
+   <a href="index1.html"> <button class="btn btn-danger">Page1</button></a></div> <div class="col-6">
     <a href="index2.html"> <button class="btn btn-danger">Page 2</button></a>
     </div></div> <br> <h3>To Be Expanded...</h3></div></div>
   </main>
