--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="index2.html"> <button class="btn btn-danger">Page 2</button></a>
     </div></div> <br> <h3>To Be Expanded...</h3></div></div>
   </main>
-<script src="main.js"
+<script src="main.js"></script>
 </body>
 
 </html>
