--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,8 @@
   <section>
     <h2>July 4th 2023</h2>
     <p>Today on the Soul Blog there appears to be a break in a atom and it turns out a tiny dinosuar was living inside it with a broken heart... That is all tyvm...</p>
-
+<h2>July 4th 2023</h2>
+    <p>Just chilling in the psych ward also bought a skateboard and published 2 webpages today including the blog. Check out soulbow2.github.io and my old page soulbow.github.io, thanks.</p>
 
 
   </section>
